# Codex-Skin-Workshop

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  check.yml
docs/: architecture.md  testing.md
portable/: 使用说明.txt  赞助商.txt
portable/macos/: 启动 Codex Skin Workshop.command
portable/windows/: 启动 Codex Skin Workshop.cmd
scripts/: create_icon.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cdp.rs  codex.rs  image_tools.rs  lib.rs  main.rs  theme.rs
src/lib/: tauri.ts
src/themes/: dream-skin.json  index.ts  neon-orbit.json  quiet-ocean.json  warm-paper.json
src/types/: theme.test.ts  theme.ts
